botm update lp group for all winners